CHATS_SIT/force-app/main/default/objects/T_APPLN_ADR__c.object
<CustomObject>
    <description>PEAK application address(es)</description>
   <!-- <enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>ADR_CITY__c</fullName>
        <description>ADR_CITY</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_COUNTY__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_COUNTY</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1__c</fullName>
        <description>ADR_LINE_1</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_2__c</fullName>
        <description>ADR_LINE_2</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_NAM__c</fullName>
        <description>ADR_NAM</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_NAM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_POST__c</fullName>
        <description>ADR_POST</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_POST</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_PO_BOX__c</fullName>
        <description>ADR_PO_BOX</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_PO_BOX</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_PRE__c</fullName>
        <description>ADR_PRE</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_PRE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE__c</fullName>
        <description>ADR_STATE</description>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_SUFX__c</fullName>
        <description>ADR_SUFX</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_SUFX</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_EXTN__c</fullName>
        <description>ADR_ZIP_EXTN</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_ZIP_EXTN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_MAIN__c</fullName>
        <description>ADR_ZIP_MAIN</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ADR_ZIP_MAIN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_ADR__c</fullName>
        <description>CDE_TYPE_ADR</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>CDE_TYPE_ADR</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_UNIT__c</fullName>
        <description>CDE_UNIT</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>CDE_UNIT</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_ADR__c</fullName>
        <label>IDN_APPLN_ADR</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Addresses</relationshipLabel>
        <relationshipName>Application_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IND_MAIL_SAME__c</fullName>
        <description>IND_MAIL_SAME</description>
        <label>IND_MAIL_SAME</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Application Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{0}</displayFormat>
        <label>Application Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>